<resources>
    <string name="app_name">My Notes</string>
    <string name="task_title_hint">Enter a Title for Task</string>
    <string name="task_title_label">Title</string>
    <string name="task_description_label">Description</string>
    <string name="task_description_hint">Enter a Description for Task</string>
    <string name="task_details_label">Details</string>
    <string name="task_completed_label">Completed</string>
    <string name="date_picker_title">Date of task: </string>
    <string name="title">Title</string>
    <string name="date">Date</string>

    <string name="new_task">New Task</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle_format">%1$d tasks</string>
</resources>